--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-validator",
+  "name": "another-typescript-validator",
   "version": "1.0.0",
   "description": "Another Typescript Validator",
   "main": "./dist/index.js",
